--- a/package.json
+++ b/package.json
@@ -7,13 +7,28 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
+    "restart": "npx react-native start --reset-cache",
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native/new-app-screen": "0.82.1",
+    "@react-navigation/bottom-tabs": "^7.8.12",
+    "@react-navigation/native": "^7.1.25",
+    "@react-navigation/native-stack": "^7.8.6",
+    "axios": "^1.13.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
-    "@react-native/new-app-screen": "0.82.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-reanimated": "^4.2.1",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
+    "react-native-sensors": "^7.3.6",
+    "react-native-sound": "^0.13.0",
+    "react-native-svg": "^15.15.1",
+    "react-native-tts": "^4.1.1",
+    "react-native-vision-camera": "^4.7.3",
+    "react-native-worklets": "^0.7.1",
+    "rxjs": "^7.5.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -32,6 +47,8 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-svg-transformer": "^1.5.2",
     "react-test-renderer": "19.1.1",
     "typescript": "^5.8.3"
   },
