--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.13.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-config": "^1.6.1",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
