--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,22 +3,13 @@ apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
 /**
- * This is the configuration block to customize your React Native Android app.
- * By default you don't need to apply any configuration, just uncomment the lines you need.
+ * React Native config
  */
 react {
-    /* Autolinking */
     autolinkLibrariesWithApp()
 }
 
-/**
- * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
- */
 def enableProguardInReleaseBuilds = false
-
-/**
- * The preferred build flavor of JavaScriptCore (JSC)
- */
 def jscFlavor = 'io.github.react-native-community:jsc-android:2026004.+'
 
 android {
@@ -35,12 +26,14 @@ android {
         versionCode 1
         versionName "1.0"
 
-        /* 🔥 AndroidManifest.xml의 ${usesCleartextTraffic}에 값 주입 */
         manifestPlaceholders = [
                 usesCleartextTraffic: "true"
         ]
     }
 
+    /**
+     * 🔐 Signing Configs
+     */
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
@@ -48,26 +41,34 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
+        release {
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+                storeFile file(MYAPP_UPLOAD_STORE_FILE)
+                storePassword MYAPP_UPLOAD_STORE_PASSWORD
+                keyAlias MYAPP_UPLOAD_KEY_ALIAS
+                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
 
+    /**
+     * 🏗 Build Types
+     */
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
-
-            /* 🔥 debug 빌드에서 HTTP(EC2) 허용 */
             manifestPlaceholders = [
                     usesCleartextTraffic: "true"
             ]
         }
 
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            proguardFiles getDefaultProguardFile("proguard-android.txt"),
+                    "proguard-rules.pro"
 
-            /* 🔥 release APK에서도 HTTP(EC2) 허용 (현재 EC2가 http이므로 true) */
             manifestPlaceholders = [
                     usesCleartextTraffic: "true"
             ]
@@ -76,7 +77,6 @@ android {
 }
 
 dependencies {
-    // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
     if (hermesEnabled.toBoolean()) {
