--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-sensors": "^7.3.6",
     "react-native-sound": "^0.13.0",
     "react-native-svg": "^15.15.1",
+    "react-native-system-navigation-bar": "^2.8.0",
     "react-native-tts": "^4.1.1",
     "react-native-vision-camera": "^4.7.3",
     "react-native-worklets": "^0.7.1",
