--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,6 +78,7 @@ android {
 
 dependencies {
     implementation("com.facebook.react:react-android")
+    implementation 'org.tensorflow:tensorflow-lite:2.13.0'
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
