--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,3 +86,16 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+configurations.all {
+    exclude group: "com.android.support"
+}
+
+/*  (얼굴형 분석모델) Jetifier 최적화 (react-android 제외) */
+configurations.all {
+    resolutionStrategy.eachDependency { details ->
+        if (details.requested.group == "com.facebook.react") {
+            details.useVersion "0.82.1"
+        }
+    }
+}
