모델 변경 및  stt초기

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 
   "compilerOptions": {
     /* RN 관대 모드 핵심 옵션 */
+    "noEmit": true,
     "strict": false,
     "skipLibCheck": true,
     "noImplicitAny": false,
