--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,6 +79,7 @@ android {
 dependencies {
     implementation("com.facebook.react:react-android")
     implementation 'org.tensorflow:tensorflow-lite:2.13.0'
+    implementation 'com.google.mlkit:face-detection:16.1.6'
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
