--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,18 +5,19 @@ buildscript {
         compileSdkVersion = 36
         targetSdkVersion = 36
         ndkVersion = "27.1.12297006"
-        kotlinVersion = "2.0.0"
+        kotlinVersion = "1.9.22"
     }
+
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
-        classpath('com.android.tools.build:gradle:8.13.1')
+        classpath("com.android.tools.build:gradle:8.3.2")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
     }
-    
 }
 
 apply plugin: "com.facebook.react.rootproject"
