--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start": "react-native start",
     "restart": "npx react-native start --reset-cache",
     "test": "jest",
-    "log": "npx react-native log-android"
+    "log": "npx react-native log-android",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@picovoice/porcupine-react-native": "^4.0.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-voice/voice": "^3.2.4",
     "@react-native/new-app-screen": "0.82.1",
@@ -22,14 +24,16 @@
     "axios": "^1.13.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-audio-recorder-player": "^3.6.4",
     "react-native-config": "^1.6.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-image-resizer": "^1.4.5",
+    "react-native-nitro-modules": "^0.33.2",
+    "react-native-nitro-sound": "^0.2.10",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-sensors": "^7.3.6",
-    "react-native-sound": "^0.13.0",
     "react-native-svg": "^15.15.1",
     "react-native-system-navigation-bar": "^2.8.0",
     "react-native-tts": "^4.1.1",
@@ -53,6 +57,8 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.11",
     "react-native-svg-transformer": "^1.5.2",
