--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,6 +24,8 @@ org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
 
+android.experimental.enableNewResourceShrinker=true
+
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
