--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "axios": "^1.13.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
-    "react-native-audio-recorder-player": "^3.6.4",
+    "react-native-audio-recorder-player": "^4.5.0",
     "react-native-config": "^1.6.1",
     "react-native-fast-image": "^8.6.3",
+    "react-native-fs": "^2.20.0",
     "react-native-image-resizer": "^1.4.5",
-    "react-native-nitro-modules": "^0.33.2",
+    "react-native-nitro-modules": "^0.33.7",
     "react-native-nitro-sound": "^0.2.10",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
